feat: remove vscode